--- a/assets/styles/_searchbar.scss
+++ b/assets/styles/_searchbar.scss
@@ -1,3 +1,6 @@
+$search-bar-border-radius: 8px;
+$signin-border-radius: $search-bar-border-radius;
+
 .fixed-at-top {
     position:fixed;
     width:100%;
@@ -12,14 +15,32 @@
     justify-content: space-between;
     align-items: center;
     padding: .4rem 1rem .4rem 0;
-    margin-left: $sidenav-width; /* Same as the width of the sidenav */
+    max-height:3.75rem;
     background-color: $bg-top-panel;
-    // Fix at the top of a page
+    //flex-grow: .7;
+   
+    #logo {
+        height: 25px;
+        
+        text-align: center;
+        padding: 0;
+        margin-left: 1rem;
+        display: block;
+        background-color: transparent !important;
+
+        &:hover {
+            background-color: transparent;
+        }
     
+        #logo-img {
+            height:25px;
+            width: 116px;
+        }
+    }
 
     .search-bar {
         flex-grow: .7;
-        margin: 0 2rem 0 5rem;
+        margin: 0 9rem 0 12rem;
         display: flex;
         font-size: 1.2em;
 
@@ -30,7 +51,8 @@
             font-size: inherit;
             padding: .3em 1em .3em 1em;
             border: 1px solid $outline-search;
-            border-top-right-radius: 0;
+            //border-top-right-radius: 0;
+            border-radius: $search-bar-border-radius 0 0 $search-bar-border-radius;
 
             &:focus {
                 outline: none;
@@ -39,16 +61,20 @@
         }
 
         .search-btn {
-            color: $txt-primary;
             background-color: $bg-search-legacy-button;
             display: flex;
             align-items: center;
             padding: 0 1.25rem;
             border: 1px solid $outline-search-legacy-button;
             border-left: none;
-            border-top-left-radius: 0;
-            border-bottom-left-radius: 0;
+            //border-top-left-radius: 0;
+            //border-bottom-left-radius: 0;
+            border-radius: 0 $search-bar-border-radius $search-bar-border-radius 0;
             cursor: pointer;
+
+            & span {
+                color: $txt-secondary;
+            }
 
             &:hover {
                 background-color: $bg-search-legacy-button-hover;
@@ -89,6 +115,7 @@
 
             & span {
                 transition: color 150ms;
+                color: $txt-primary;
             }
 
             &:hover {
@@ -104,7 +131,7 @@
             flex-wrap: wrap;
             border: 1px solid $outline-signin-topmenu-button;
             padding: .5rem 1rem;
-            border-radius: .1rem;
+            border-radius: $signin-border-radius;
             transition: border 150ms;
 
             & span {
