--- a/assets/styles/_filters.scss
+++ b/assets/styles/_filters.scss
@@ -5,7 +5,6 @@
     display: none;
     overflow: hidden;
 
-
     //display: flex;
     flex-direction: column;
     padding: .5rem 2rem;
@@ -37,7 +36,7 @@
             word-wrap:none;
             //white-space: nowrap;
             border: 1px solid $outline-filter-button;
-            border-radius: 420px;
+            border-radius: 10px;
             background-color: $bg-filter-button;
             padding: .5rem .3rem;
             width: fit-content;
@@ -55,11 +54,11 @@
             &:hover {
                 background-color: $bg-filter-button-hover;
             }
-            /*
-            #genre {
-                width: 79.5667px;
+            
+            #type {
+                width: 50px;
             }
-
+/*
             #publisher {
                 width: 104.233px
             }
@@ -81,6 +80,5 @@
 }
 
 #width_tmp_select{
-    display : none;
-    
+    display : none; 
 } 
