--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -11,7 +11,9 @@
 @import './main'; 
 @import './searchbar'; 
 @import './filters'; 
-@import './products'; 
+@import './products';
+@import './catalog';
+@import './path';
 
 // home
 @import './slideshow'; 
