--- a/assets/styles/_body.scss
+++ b/assets/styles/_body.scss
@@ -2,7 +2,7 @@ body {
     margin: 0;
     background-color: $bg-content;
     height: 100%;
-    padding-top:3rem;
+    //padding-top:3rem;
 }
 
 html {
